--- a/jupyter-demo.ipynb
+++ b/jupyter-demo.ipynb
@@ -8,7 +8,17 @@
     "**This is a demostration of what jupyter notebook can do**\n",
     "1. run live python code\n",
     "2. insert markdown documentation\n",
-    "3. magic commands using percent(single/double) sign\n"
+    "3. magic commands using percent(single/double) sign\n",
+    "4. jupyter extention, such as sql\n",
+    "5. better to record version information in the beginning\n",
+    "6. better to load ext and imports in the beginning\n",
+    "7. you can use hooks to do some additional things you want to do\n",
+    "\n",
+    "# Issue to consider when working with jupyter\n",
+    "1. how to collaborative within team?\n",
+    "2. how to reliably capture and share it with team members?\n",
+    "- save different format of the output, such as .py and .html\n",
+    "3. clearly deliver insights to other team members?\n"
    ]
   },
   {
@@ -420,6 +430,567 @@
    "source": [
     "%%HTML\n",
     "<a href=\"https://github.com/jupyter/jupyter/wiki/A-gallery-of-interesting-Jupyter-Notebooks\">A gallery of interesting Jupyter notebooks</a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import IFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"700\"\n",
+       "            height=\"350\"\n",
+       "            src=\"http://www.eia.gov/coal/data.cfm\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x106dc9fd0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(\"http://www.eia.gov/coal/data.cfm\",width=700,height=350)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load mytrain.dat\n",
+    "0 1 2 3 4\n",
+    "5 6 7 8 9\n",
+    "10 11 12 13 14\n",
+    "15 16 17 18 19\n",
+    "20 21 22 23 24\n",
+    "25 26 27 28 29\n",
+    "30 31 32 33 34\n",
+    "35 36 37 38 39\n",
+    "40 41 42 43 44\n",
+    "45 46 47 48 49\n",
+    "50 51 52 53 54\n",
+    "55 56 57 58 59\n",
+    "60 61 62 63 64\n",
+    "65 66 67 68 69\n",
+    "70 71 72 73 74\n",
+    "75 76 77 78 79\n",
+    "80 81 82 83 84\n",
+    "85 86 87 88 89\n",
+    "90 91 92 93 94\n",
+    "95 96 97 98 99\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IFrame\t \n"
+     ]
+    }
+   ],
+   "source": [
+    "who"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext sql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The pandas module is not an IPython extension.\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dct = {'one' : pd.Series([1., 2., 3.], index=['a', 'b', 'c']),\n",
+    "       'two' : pd.Series([1., 2., 3., 4.], index=['a', 'b', 'c', 'd'])}\n",
+    "df = pd.DataFrame(dct)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Persisted df'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql sqlite://\n",
+    "    PERSIST df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/json": {
+       "cell": {
+        "!": "OSMagics",
+        "HTML": "Other",
+        "SVG": "Other",
+        "bash": "Other",
+        "capture": "ExecutionMagics",
+        "debug": "ExecutionMagics",
+        "file": "Other",
+        "html": "DisplayMagics",
+        "javascript": "DisplayMagics",
+        "js": "DisplayMagics",
+        "latex": "DisplayMagics",
+        "markdown": "DisplayMagics",
+        "perl": "Other",
+        "prun": "ExecutionMagics",
+        "pypy": "Other",
+        "python": "Other",
+        "python2": "Other",
+        "python3": "Other",
+        "ruby": "Other",
+        "script": "ScriptMagics",
+        "sh": "Other",
+        "svg": "DisplayMagics",
+        "sx": "OSMagics",
+        "system": "OSMagics",
+        "time": "ExecutionMagics",
+        "timeit": "ExecutionMagics",
+        "writefile": "OSMagics"
+       },
+       "line": {
+        "alias": "OSMagics",
+        "alias_magic": "BasicMagics",
+        "autoawait": "AsyncMagics",
+        "autocall": "AutoMagics",
+        "automagic": "AutoMagics",
+        "autosave": "KernelMagics",
+        "bookmark": "OSMagics",
+        "cat": "Other",
+        "cd": "OSMagics",
+        "clear": "KernelMagics",
+        "colors": "BasicMagics",
+        "config": "ConfigMagics",
+        "connect_info": "KernelMagics",
+        "cp": "Other",
+        "debug": "ExecutionMagics",
+        "dhist": "OSMagics",
+        "dirs": "OSMagics",
+        "doctest_mode": "BasicMagics",
+        "ed": "Other",
+        "edit": "KernelMagics",
+        "env": "OSMagics",
+        "gui": "BasicMagics",
+        "hist": "Other",
+        "history": "HistoryMagics",
+        "killbgscripts": "ScriptMagics",
+        "ldir": "Other",
+        "less": "KernelMagics",
+        "lf": "Other",
+        "lk": "Other",
+        "ll": "Other",
+        "load": "CodeMagics",
+        "load_ext": "ExtensionMagics",
+        "loadpy": "CodeMagics",
+        "logoff": "LoggingMagics",
+        "logon": "LoggingMagics",
+        "logstart": "LoggingMagics",
+        "logstate": "LoggingMagics",
+        "logstop": "LoggingMagics",
+        "ls": "Other",
+        "lsmagic": "BasicMagics",
+        "lx": "Other",
+        "macro": "ExecutionMagics",
+        "magic": "BasicMagics",
+        "man": "KernelMagics",
+        "matplotlib": "PylabMagics",
+        "mkdir": "Other",
+        "more": "KernelMagics",
+        "mv": "Other",
+        "notebook": "BasicMagics",
+        "page": "BasicMagics",
+        "pastebin": "CodeMagics",
+        "pdb": "ExecutionMagics",
+        "pdef": "NamespaceMagics",
+        "pdoc": "NamespaceMagics",
+        "pfile": "NamespaceMagics",
+        "pinfo": "NamespaceMagics",
+        "pinfo2": "NamespaceMagics",
+        "pip": "BasicMagics",
+        "popd": "OSMagics",
+        "pprint": "BasicMagics",
+        "precision": "BasicMagics",
+        "prun": "ExecutionMagics",
+        "psearch": "NamespaceMagics",
+        "psource": "NamespaceMagics",
+        "pushd": "OSMagics",
+        "pwd": "OSMagics",
+        "pycat": "OSMagics",
+        "pylab": "PylabMagics",
+        "qtconsole": "KernelMagics",
+        "quickref": "BasicMagics",
+        "recall": "HistoryMagics",
+        "rehashx": "OSMagics",
+        "reload_ext": "ExtensionMagics",
+        "rep": "Other",
+        "rerun": "HistoryMagics",
+        "reset": "NamespaceMagics",
+        "reset_selective": "NamespaceMagics",
+        "rm": "Other",
+        "rmdir": "Other",
+        "run": "ExecutionMagics",
+        "save": "CodeMagics",
+        "sc": "OSMagics",
+        "set_env": "OSMagics",
+        "store": "StoreMagics",
+        "sx": "OSMagics",
+        "system": "OSMagics",
+        "tb": "ExecutionMagics",
+        "time": "ExecutionMagics",
+        "timeit": "ExecutionMagics",
+        "unalias": "OSMagics",
+        "unload_ext": "ExtensionMagics",
+        "who": "NamespaceMagics",
+        "who_ls": "NamespaceMagics",
+        "whos": "NamespaceMagics",
+        "xdel": "NamespaceMagics",
+        "xmode": "BasicMagics"
+       }
+      },
+      "text/plain": [
+       "Available line magics:\n",
+       "%alias  %alias_magic  %autoawait  %autocall  %automagic  %autosave  %bookmark  %cat  %cd  %clear  %colors  %config  %connect_info  %cp  %debug  %dhist  %dirs  %doctest_mode  %ed  %edit  %env  %gui  %hist  %history  %killbgscripts  %ldir  %less  %lf  %lk  %ll  %load  %load_ext  %loadpy  %logoff  %logon  %logstart  %logstate  %logstop  %ls  %lsmagic  %lx  %macro  %magic  %man  %matplotlib  %mkdir  %more  %mv  %notebook  %page  %pastebin  %pdb  %pdef  %pdoc  %pfile  %pinfo  %pinfo2  %popd  %pprint  %precision  %prun  %psearch  %psource  %pushd  %pwd  %pycat  %pylab  %qtconsole  %quickref  %recall  %rehashx  %reload_ext  %rep  %rerun  %reset  %reset_selective  %rm  %rmdir  %run  %save  %sc  %set_env  %store  %sx  %system  %tb  %time  %timeit  %unalias  %unload_ext  %who  %who_ls  %whos  %xdel  %xmode\n",
+       "\n",
+       "Available cell magics:\n",
+       "%%!  %%HTML  %%SVG  %%bash  %%capture  %%debug  %%file  %%html  %%javascript  %%js  %%latex  %%markdown  %%perl  %%prun  %%pypy  %%python  %%python2  %%python3  %%ruby  %%script  %%sh  %%svg  %%sx  %%system  %%time  %%timeit  %%writefile\n",
+       "\n",
+       "Automagic is ON, % prefix IS NOT needed for line magics."
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%lsmagic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dct\t df\t pd\t \n"
+     ]
+    }
+   ],
+   "source": [
+    "who"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>index</th>\n",
+       "        <th>one</th>\n",
+       "        <th>two</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>a</td>\n",
+       "        <td>1.0</td>\n",
+       "        <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>b</td>\n",
+       "        <td>2.0</td>\n",
+       "        <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>c</td>\n",
+       "        <td>3.0</td>\n",
+       "        <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>d</td>\n",
+       "        <td>None</td>\n",
+       "        <td>4.0</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('a', 1.0, 1.0), ('b', 2.0, 2.0), ('c', 3.0, 3.0), ('d', None, 4.0)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql sqlite://\n",
+    "select * from df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>one</th>\n",
+       "      <th>two</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   one  two\n",
+       "a  1.0  1.0\n",
+       "b  2.0  2.0\n",
+       "c  3.0  3.0\n",
+       "d  NaN  4.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite://\n",
+      "Done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "dbtest=%sql select * from df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sql.run.ResultSet"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(dbtest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/json": {
+       "Software versions": [
+        {
+         "module": "Python",
+         "version": "3.6.1 64bit [GCC 4.2.1 (Apple Inc. build 5666) (dot 3)]"
+        },
+        {
+         "module": "IPython",
+         "version": "7.1.1"
+        },
+        {
+         "module": "OS",
+         "version": "Darwin 16.1.0 x86_64 i386 64bit"
+        },
+        {
+         "module": "numpy",
+         "version": "1.15.4"
+        },
+        {
+         "module": "matplotlib",
+         "version": "3.0.2"
+        },
+        {
+         "module": "pandas",
+         "version": "0.23.4"
+        }
+       ]
+      },
+      "text/html": [
+       "<table><tr><th>Software</th><th>Version</th></tr><tr><td>Python</td><td>3.6.1 64bit [GCC 4.2.1 (Apple Inc. build 5666) (dot 3)]</td></tr><tr><td>IPython</td><td>7.1.1</td></tr><tr><td>OS</td><td>Darwin 16.1.0 x86_64 i386 64bit</td></tr><tr><td>numpy</td><td>1.15.4</td></tr><tr><td>matplotlib</td><td>3.0.2</td></tr><tr><td>pandas</td><td>0.23.4</td></tr><tr><td colspan='2'>Wed Nov 14 19:54:01 2018 CST</td></tr></table>"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{|l|l|}\\hline\n",
+       "{\\bf Software} & {\\bf Version} \\\\ \\hline\\hline\n",
+       "Python & 3.6.1 64bit [GCC 4.2.1 (Apple Inc. build 5666) (dot 3)] \\\\ \\hline\n",
+       "IPython & 7.1.1 \\\\ \\hline\n",
+       "OS & Darwin 16.1.0 x86\\_64 i386 64bit \\\\ \\hline\n",
+       "numpy & 1.15.4 \\\\ \\hline\n",
+       "matplotlib & 3.0.2 \\\\ \\hline\n",
+       "pandas & 0.23.4 \\\\ \\hline\n",
+       "\\hline \\multicolumn{2}{|l|}{Wed Nov 14 19:54:01 2018 CST} \\\\ \\hline\n",
+       "\\end{tabular}\n"
+      ],
+      "text/plain": [
+       "Software versions\n",
+       "Python 3.6.1 64bit [GCC 4.2.1 (Apple Inc. build 5666) (dot 3)]\n",
+       "IPython 7.1.1\n",
+       "OS Darwin 16.1.0 x86_64 i386 64bit\n",
+       "numpy 1.15.4\n",
+       "matplotlib 3.0.2\n",
+       "pandas 0.23.4\n",
+       "Wed Nov 14 19:54:01 2018 CST"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%load_ext version_information\n",
+    "%version_information numpy,matplotlib,pandas"
    ]
   },
   {
